[package]
name = "slam"
version = "0.1.0"
edition = "2021"
description = "An ELO-based matchmaking system for multiplayer games"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microlp = "0.2.11"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[[examples]]
name = "client"
